--- a/marshak/2022_06/Submit Test Job for Raider.ipynb
+++ b/marshak/2022_06/Submit Test Job for Raider.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b76cf31",
+   "id": "e18af7f8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:45:33.673566Z",
-     "start_time": "2023-01-24T19:45:33.571661Z"
+     "end_time": "2023-01-24T20:13:30.901686Z",
+     "start_time": "2023-01-24T20:13:30.839449Z"
     }
    },
    "outputs": [],
@@ -17,25 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "67034fb4",
+   "execution_count": 10,
+   "id": "6e8a1651",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:48:44.595882Z",
-     "start_time": "2023-01-24T19:48:44.587703Z"
+     "end_time": "2023-01-24T20:14:56.313968Z",
+     "start_time": "2023-01-24T20:14:56.310397Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'reference': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
-       "  'secondary': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
+       "[{'granules': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
+       "  'secondary_granules': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
        "   'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'],\n",
        "  'weather_model': 'HRRR'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,15 +43,21 @@
    "source": [
     "records_to_submit = [\n",
     "                     # Track 71 Test\n",
-    "                     {'reference': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
-    "                      'secondary': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
-    "                                    'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'],\n",
-    "                      'weather_model': 'ERA5'\n",
+    "                     {'granules': \n",
+    "                          ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
+    "                      'secondary_granules': \n",
+    "                          ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
+    "                           'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'],\n",
+    "                      'weather_model': 'HRRR'\n",
     "                     },\n",
     "                     # Can add more\n",
-    "                     # {'reference': ['S1A_IW_SLC__1SDV_20220520T071101_20220520T071128_043291_052B7B_7B63'],\n",
-    "                     #  'secondary': ['S1A_IW_SLC__1SDV_20220508T071100_20220508T071127_043116_05262A_AA24']\n",
-    "                     # }\n",
+    "                     # {'granules': \n",
+    "                     #     ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
+    "                     # 'secondary_granules': \n",
+    "                     #     ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
+    "                     #      'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'],\n",
+    "                     # 'weather_model': 'HRRR'\n",
+    "                     }\n",
     "                    ]\n",
     "\n",
     "records_to_submit"
@@ -60,11 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7517e4a4",
+   "id": "dde3b343",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:45:54.112106Z",
-     "start_time": "2023-01-24T19:45:37.519127Z"
+     "end_time": "2023-01-24T20:13:45.067772Z",
+     "start_time": "2023-01-24T20:13:30.913186Z"
     }
    },
    "outputs": [
@@ -86,52 +92,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "24dfaca7",
+   "execution_count": 5,
+   "id": "a0b35643",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:49:06.205033Z",
-     "start_time": "2023-01-24T19:49:06.202822Z"
+     "end_time": "2023-01-24T20:13:59.713113Z",
+     "start_time": "2023-01-24T20:13:59.711149Z"
     }
    },
    "outputs": [],
    "source": [
-    "JOB_NAME = 'raider-test-era5'"
+    "JOB_NAME = 'raider-test-hrrr-corrected'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ec927456",
+   "execution_count": 9,
+   "id": "6a38c859",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:49:18.605852Z",
-     "start_time": "2023-01-24T19:49:13.514724Z"
+     "end_time": "2023-01-24T20:14:52.394632Z",
+     "start_time": "2023-01-24T20:14:52.390535Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'raider-test-hrrr-corrected',\n",
+       "  'job_type': 'INSAR_ISCE_TEST',\n",
+       "  'job_parameters': {'granules': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
+       "   'secondary_granules': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
+       "    'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'],\n",
+       "   'weather_model': 'HRRR'}}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "job_dicts = [{'name': JOB_NAME,\n",
     "              # NOTE: we are still using the `dev` branch. Change this to \"INSAR_ISCE\" to use the `main` branch.\n",
     "              'job_type': 'INSAR_ISCE_TEST',\n",
-    "              'job_parameters': {'granules': r['reference'],\n",
-    "                                 'secondary_granules': r['secondary']}} \n",
+    "              'job_parameters': r\n",
+    "             }\n",
     "             # NOTE THERE IS AN INDEX - this is to submit only a subset of Jobs\n",
     "             for r in records_to_submit]\n",
-    "\n",
-    "\n",
-    "# UNCOMMENT TO SUBMIT\n",
-    "submitted_jobs = hyp3_isce.submit_prepared_jobs(job_dicts)"
+    "job_dicts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60fde707",
+   "metadata": {},
+   "source": [
+    "Submitting jobs!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "32207cd4",
+   "id": "801e9262",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:50:17.125129Z",
-     "start_time": "2023-01-24T19:50:17.017305Z"
+     "end_time": "2023-01-24T20:15:05.856648Z",
+     "start_time": "2023-01-24T20:15:04.198650Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "submitted_jobs = hyp3_isce.submit_prepared_jobs(job_dicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f28df6bc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-24T20:15:08.840871Z",
+     "start_time": "2023-01-24T20:15:08.718429Z"
     }
    },
    "outputs": [
@@ -150,22 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ac92b4c2",
+   "execution_count": 13,
+   "id": "1e636922",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T19:49:25.254606Z",
-     "start_time": "2023-01-24T19:49:25.251632Z"
+     "end_time": "2023-01-24T20:15:14.000754Z",
+     "start_time": "2023-01-24T20:15:13.997881Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Batch([Job.from_dict({'job_id': '0af509ab-d5e5-4970-b82a-e934ca0e76ff', 'job_type': 'INSAR_ISCE_TEST', 'request_time': '2023-01-24T19:49:18+00:00', 'status_code': 'PENDING', 'user_id': 'cmarshak', 'name': 'raider-test-era5', 'job_parameters': {'granules': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'], 'secondary_granules': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165', 'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7']}})])"
+       "Batch([Job.from_dict({'job_id': '3ee321d9-c9b4-4b25-a085-bdc594cbe3e7', 'job_type': 'INSAR_ISCE_TEST', 'request_time': '2023-01-24T20:15:05+00:00', 'status_code': 'PENDING', 'user_id': 'cmarshak', 'name': 'raider-test-hrrr-corrected', 'job_parameters': {'granules': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'], 'secondary_granules': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165', 'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'], 'weather_model': 'HRRR'}})])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5b4d3c06",
+   "id": "86863f3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-15T20:38:29.611364Z",
