download all products

--- a/marshak/2025_09/check_products/1_download_data.ipynb
+++ b/marshak/2025_09/check_products/1_download_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4ed5f7e5-848f-45aa-b522-1a0ee5bd1960",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 HyP3 Jobs: 2 succeeded, 0 failed, 4 running, 0 pending.\n"
+      "6 HyP3 Jobs: 6 succeeded, 0 failed, 0 running, 0 pending.\n"
      ]
     }
    ],
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bc68825b-0006-4510-a9ae-af921db76bff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99b20ea563a7457a985ccf9f58e9c7a2",
+       "model_id": "3c3c4cb5f65c4747bff80a521f0691a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,17 +52,37 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Only succeeded jobs can be downloaded; job is RUNNING. Skipping download for HyP3 INSAR_ISCE job fc7ef497-2139-4351-b7e3-89eeb4da6642.\n",
-      "Warning: Only succeeded jobs can be downloaded; job is RUNNING. Skipping download for HyP3 INSAR_ISCE job 89e9a3ec-5a67-4579-81e2-e67f495e0d78.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7451a6ceb164b4cb80a142996857cc3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S1-GUNW-A-R-064-tops-20240115_20240103-015044-00119W_00033N-PP-9902-v3_0_1.nc:   0%|          | 0/124962227 [0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38b3342e73034cd291d8d683da2cbdff",
+       "model_id": "80cdb85fd32b43cb9d6e021890a47f31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S1-GUNW-A-R-064-tops-20240208_20240103-015044-00119W_00033N-PP-629e-v3_0_1.nc:   0%|          | 0/127757210 [0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb0f5d2208914a2fb5f8aa4bd2a8162b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,17 +94,37 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Only succeeded jobs can be downloaded; job is RUNNING. Skipping download for HyP3 INSAR_ISCE job fab9bb2c-7796-479c-9d21-5cdba221f8d4.\n",
-      "Warning: Only succeeded jobs can be downloaded; job is RUNNING. Skipping download for HyP3 INSAR_ISCE job 995e924a-6d20-46d6-98a7-0e11d905a3b3.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ed945958d7f4c83b17aec8b42f87207",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S1-GUNW-A-R-064-tops-20240208_20240115-015044-00119W_00033N-PP-8b54-v3_0_1.nc:   0%|          | 0/128456828 [0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "551f4ced222644b89429850af3fc903c",
+       "model_id": "cad23f7617284543a5161ab854a8f9eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S1-GUNW-A-R-064-tops-20240220_20240115-015044-00119W_00033N-PP-60cc-v3_0_1.nc:   0%|          | 0/127194311 [0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a3925e290b44fa09911dba224d10c38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,11 +138,15 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc'),\n",
+       "[PosixPath('new_products/S1-GUNW-A-R-064-tops-20240115_20240103-015044-00119W_00033N-PP-9902-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240208_20240103-015044-00119W_00033N-PP-629e-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240208_20240115-015044-00119W_00033N-PP-8b54-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240115-015044-00119W_00033N-PP-60cc-v3_0_1.nc'),\n",
        " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240208-015044-00119W_00033N-PP-e9c9-v3_0_1.nc')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,14 +154,6 @@
    "source": [
     "jobs.download_files('new_products')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7050a908-3cac-4501-83d6-620f060a9c92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
