--- a/marshak/2025_09/check_products/2_Check_layers.ipynb
+++ b/marshak/2025_09/check_products/2_Check_layers.ipynb
@@ -5,12 +5,12 @@
    "id": "61a00ffa-f4e3-4b52-bff9-446ce8b27ed0",
    "metadata": {},
    "source": [
-    "Please use the same environment installed "
+    "Please use the same environment installed from https://github.com/ACCESS-Cloud-Based-InSAR/DockerizedTopsApp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cae7b71b",
    "metadata": {
     "ExecuteTime": {
@@ -18,19 +18,9 @@
      "start_time": "2023-02-15T02:24:02.633163Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmarshak/miniforge3/envs/topsapp_env/lib/python3.11/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.26.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from rio_tools import get_geopandas_features_from_array\n",
     "import geopandas as gpd\n",
     "import rasterio\n",
     "import numpy as np\n",
@@ -42,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "36d80685-e301-41ed-aa79-a9344edff5a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "INDEX_TO_CHECK = 0"
+    "INDEX_TO_CHECK = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "db16ff3f",
    "metadata": {
     "ExecuteTime": {
@@ -64,11 +54,15 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc'),\n",
+       "[PosixPath('new_products/S1-GUNW-A-R-064-tops-20240115_20240103-015044-00119W_00033N-PP-9902-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240208_20240103-015044-00119W_00033N-PP-629e-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240208_20240115-015044-00119W_00033N-PP-8b54-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240115-015044-00119W_00033N-PP-60cc-v3_0_1.nc'),\n",
+       " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc'),\n",
        " PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240208-015044-00119W_00033N-PP-e9c9-v3_0_1.nc')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9f79cdd7-9f16-4d7a-bd69-d7058d013250",
    "metadata": {},
    "outputs": [
@@ -95,7 +89,7 @@
        " PosixPath('existing_products/S1-GUNW-A-R-064-tops-20240220_20240208-015044-00119W_00033N-PP-e9c9-v3_0_1.nc')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "4b61d01e-27d5-4267-9cb7-9400a0d896e6",
    "metadata": {},
    "outputs": [
@@ -117,7 +111,7 @@
        "PosixPath('new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "739e298c-cbd1-43b0-a41e-4d5b2ecd2440",
    "metadata": {},
    "outputs": [
@@ -139,7 +133,7 @@
        "38"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "3a85ba50",
    "metadata": {
     "ExecuteTime": {
@@ -165,7 +159,7 @@
        "PosixPath('existing_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "b8c41a06",
    "metadata": {},
    "outputs": [
@@ -193,13 +187,21 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmarshak/miniforge3/envs/topsapp_env/lib/python3.11/site-packages/rasterio/__init__.py:356: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.\n",
+      "  dataset = DatasetReader(path, driver=driver, sharing=sharing, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "['netcdf:new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc:/science/grids/corrections/derived/ionosphere/ionosphere',\n",
        " 'netcdf:new_products/S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1.nc:/science/grids/corrections/derived/ionosphereBurstRamps/ionosphereBurstRamps']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "11199a17-3c7c-4214-a940-c0fd2e3ed9a7",
    "metadata": {},
    "outputs": [
@@ -225,7 +227,7 @@
        " '/science/grids/corrections/derived/ionosphereBurstRamps/ionosphereBurstRamps']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "8a65f8a8-2d1d-41d8-976a-655204c52b46",
    "metadata": {},
    "outputs": [
@@ -245,10 +247,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New dataset name S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1\n",
+      "G(old)en datset name S1-GUNW-A-R-064-tops-20240220_20240127-015044-00119W_00033N-PP-4f28-v3_0_1\n",
       "##########\n",
       "/science/grids/corrections/derived/ionosphere/ionosphere\n",
       "##########\n",
       "The variable /science/grids/corrections/derived/ionosphere/ionosphere has RMS error:  3.6565418\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.9450711896055396e-05\n",
+      "Total valid pixels : 51412\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -257,6 +264,9 @@
       "/science/grids/corrections/derived/ionosphereBurstRamps/ionosphereBurstRamps\n",
       "##########\n",
       "The variable /science/grids/corrections/derived/ionosphereBurstRamps/ionosphereBurstRamps has RMS error:  2.2352712\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.5960489489060042e-07\n",
+      "Total valid pixels : 6265472\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -265,6 +275,9 @@
       "/science/grids/corrections/external/tides/solidEarth/reference/solidEarthTide\n",
       "##########\n",
       "The variable /science/grids/corrections/external/tides/solidEarth/reference/solidEarthTide has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -273,6 +286,9 @@
       "/science/grids/corrections/external/tides/solidEarth/secondary/solidEarthTide\n",
       "##########\n",
       "The variable /science/grids/corrections/external/tides/solidEarth/secondary/solidEarthTide has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -281,6 +297,9 @@
       "/science/grids/corrections/external/troposphere/HRRR/reference/troposphereHydrostatic\n",
       "##########\n",
       "The variable /science/grids/corrections/external/troposphere/HRRR/reference/troposphereHydrostatic has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 52800\n",
       "The origin of the new dataset is:  -119.12500000000001 34.975000772720726\n",
       "The origin of the g(old)en dataset is:  -119.12500000000001 34.975000772720726\n",
       "\n",
@@ -289,6 +308,9 @@
       "/science/grids/corrections/external/troposphere/HRRR/reference/troposphereWet\n",
       "##########\n",
       "The variable /science/grids/corrections/external/troposphere/HRRR/reference/troposphereWet has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 52800\n",
       "The origin of the new dataset is:  -119.12500000000001 34.975000772720726\n",
       "The origin of the g(old)en dataset is:  -119.12500000000001 34.975000772720726\n",
       "\n",
@@ -297,6 +319,9 @@
       "/science/grids/corrections/external/troposphere/HRRR/secondary/troposphereHydrostatic\n",
       "##########\n",
       "The variable /science/grids/corrections/external/troposphere/HRRR/secondary/troposphereHydrostatic has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 52800\n",
       "The origin of the new dataset is:  -119.12500000000001 34.975000772720726\n",
       "The origin of the g(old)en dataset is:  -119.12500000000001 34.975000772720726\n",
       "\n",
@@ -305,6 +330,9 @@
       "/science/grids/corrections/external/troposphere/HRRR/secondary/troposphereWet\n",
       "##########\n",
       "The variable /science/grids/corrections/external/troposphere/HRRR/secondary/troposphereWet has RMS error:  9.536743e-07\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.893939393939394e-05\n",
+      "Total valid pixels : 52800\n",
       "The origin of the new dataset is:  -119.12500000000001 34.975000772720726\n",
       "The origin of the g(old)en dataset is:  -119.12500000000001 34.975000772720726\n",
       "\n",
@@ -313,6 +341,9 @@
       "/science/grids/data/amplitude\n",
       "##########\n",
       "The variable /science/grids/data/amplitude has RMS error:  63.894825\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.1677124699547581e-07\n",
+      "Total valid pixels : 8563752\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -321,6 +352,9 @@
       "/science/grids/data/coherence\n",
       "##########\n",
       "The variable /science/grids/data/coherence has RMS error:  0.074583285\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.1677124699547581e-07\n",
+      "Total valid pixels : 8563752\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -329,6 +363,9 @@
       "/science/grids/data/connectedComponents\n",
       "##########\n",
       "The variable /science/grids/data/connectedComponents has RMS error:  113.06193\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.1677124699547581e-07\n",
+      "Total valid pixels : 8563752\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -337,6 +374,9 @@
       "/science/grids/data/unfilteredCoherence\n",
       "##########\n",
       "The variable /science/grids/data/unfilteredCoherence has RMS error:  2.9005714e-05\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.1677124699547581e-07\n",
+      "Total valid pixels : 8563752\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -345,6 +385,9 @@
       "/science/grids/data/unwrappedPhase\n",
       "##########\n",
       "The variable /science/grids/data/unwrappedPhase has RMS error:  182.5371\n",
+      "pixels with deviation larger than 1e-07:  1\n",
+      "Percent of pixels with deviation larger than 1e-07:  1.1677124699547581e-07\n",
+      "Total valid pixels : 8563752\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -353,6 +396,9 @@
       "/science/grids/imagingGeometry/azimuthAngle\n",
       "##########\n",
       "The variable /science/grids/imagingGeometry/azimuthAngle has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -361,6 +407,9 @@
       "/science/grids/imagingGeometry/incidenceAngle\n",
       "##########\n",
       "The variable /science/grids/imagingGeometry/incidenceAngle has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -369,6 +418,9 @@
       "/science/grids/imagingGeometry/lookAngle\n",
       "##########\n",
       "The variable /science/grids/imagingGeometry/lookAngle has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -377,6 +429,9 @@
       "/science/grids/imagingGeometry/parallelBaseline\n",
       "##########\n",
       "The variable /science/grids/imagingGeometry/parallelBaseline has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -385,6 +440,9 @@
       "/science/grids/imagingGeometry/perpendicularBaseline\n",
       "##########\n",
       "The variable /science/grids/imagingGeometry/perpendicularBaseline has RMS error:  0.0\n",
+      "pixels with deviation larger than 1e-07:  0\n",
+      "Percent of pixels with deviation larger than 1e-07:  0.0\n",
+      "Total valid pixels : 4408\n",
       "The origin of the new dataset is:  -119.25 35.35\n",
       "The origin of the g(old)en dataset is:  -119.25 35.35\n",
       "\n",
@@ -393,7 +451,12 @@
     }
    ],
    "source": [
+    "ABSOLUTE_DIFF_THRESHOLD = 1e-7\n",
+    "\n",
+    "print('New dataset name', new_prod.stem)\n",
+    "print('G(old)en datset name', old_prod.stem)\n",
     "for golden_path, local_var in zip(subdatasets, local_vars):\n",
+    "    \n",
     "    print('#'*10)\n",
     "    print(local_var)\n",
     "    print('#'*10)\n",
@@ -411,14 +474,22 @@
     "\n",
     "    X_new_data = X_new.ravel()\n",
     "    X_golden_data = X_golden.ravel()\n",
+    "    total_mask = ~np.isnan(X_new) & ~np.isnan(X_golden)\n",
     "    if X_new.dtype in [np.float32, np.float64]:\n",
-    "        X_new_data = X_new[~np.isnan(X_new)]\n",
-    "        X_golden_data = X_golden[~np.isnan(X_golden)]\n",
+    "        X_new_data = X_new[total_mask]\n",
+    "        X_golden_data = X_golden[total_mask]\n",
+    "        rms = np.linalg.norm(X_new_data - X_golden_data)\n",
+    "        n_error_large = (rms > ABSOLUTE_DIFF_THRESHOLD).sum()\n",
+    "        perc_error_large = n_error_large / total_mask.sum()\n",
     "\n",
-    "    print(f'The variable {local_var} has RMS error: ', np.linalg.norm(X_new_data - X_golden_data))\n",
-    "    print(f'The origin of the new dataset is: ', trans_new.c, trans_new.f)\n",
-    "    print(f'The origin of the g(old)en dataset is: ', trans_golden.c, trans_golden.f)\n",
-    "    print('\\n')"
+    "        print(f'The variable {local_var} has RMS error: ', rms)\n",
+    "        print(f'pixels with deviation larger than {ABSOLUTE_DIFF_THRESHOLD}: ', n_error_large)\n",
+    "        print(f'Percent of pixels with deviation larger than {ABSOLUTE_DIFF_THRESHOLD}: ', perc_error_large)\n",
+    "        print(f'Total valid pixels : {total_mask.sum()}')\n",
+    "\n",
+    "        print(f'The origin of the new dataset is: ', trans_new.c, trans_new.f)\n",
+    "        print(f'The origin of the g(old)en dataset is: ', trans_golden.c, trans_golden.f)\n",
+    "        print('\\n')"
    ]
   }
  ],
